# verus-explorer

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md  announcement.md  build.rs  editor.js  index.html  package-lock.json  package.json  rust-toolchain.toml  setup.sh  sw.js  verus-explorer-PLAN.md  verus-explorer-POC.md  verus_builtin_macros_shim.rs  verus_explorer.js
.cargo/: config.toml
docs/: architecture.md  overview.md  roadmap.md
editor/: editor-src.js  package-lock.json
examples/: collections.rs  recursion.rs
patches/: air-wasm.patch
public/: app.js  editor-src.js  index.html  styles.css  worker.js
public/examples/: arith.rs  collections.rs  failure.rs  loop.rs  map.rs  precondition_fail.rs  recursion.rs  requires_ensures.rs  sequence.rs  struct_invariant.rs
rustc-rlibs/: Cargo.toml  lib.rs
rustc-rlibs/.cargo/: config.toml
scripts/: build-host-rust.sh  build-host-verus.sh  build-libs-sysroot.sh  build-libs-vir.sh  build-libs.sh  build-wasm-libs.sh  build-wasm-sysroot.sh  build-z3.sh  package.json  rustc-wrapper.sh  screenshot.mjs  snapshot-verus-stage1.sh
scripts/editor/: package-lock.json  package.json
scripts/screenshot/: screenshot.mjs
src/: frontend.rs  lib.rs  pipeline.rs  proc_macros.rs  ra_frontend.rs  sysroot.rs  vir_bridge.rs  vir_query.rs  wasm_libs.rs
tests/: smoke.rs
verus-explorer/: Cargo.toml  build.rs
verus-explorer/src/: externs.rs  lib.rs  pipeline.rs  rust.rs  rustc_stage.rs  util.rs  verify_stage.rs  verus.rs  vir_stage.rs  wasm.rs  wasm_libs.rs
verus-explorer/tests/: run.rs  smoke.rs
z3/: z3.js
