# Single workspace shared with rustc-rlibs so Cargo resolves deps *once*
# across both crates: shared Cargo.lock → identical dep versions, shared
# feature unions → identical crate hashes, shared target/ → rustc-rlibs'
# wasm32 rlibs land in the deps dir the explorer (and Verus's
# `mir_build_verus` fork) look in for `extern crate rustc_*;` lookups.
# Two independent workspaces would resolve features differently and surface
# as E0460 "possibly newer version of crate" mismatches at link time.
# `exclude = ["third_party"]` keeps Verus's inner workspace from being
# absorbed (its members rely on `lints = { workspace = true }` from
# Verus's own `source/Cargo.toml`).
[workspace]
members = [
    "rustc-rlibs",
    # Pulled in as explicit members so they inherit `[workspace.lints]` below
    # (their own ancestor workspace `third_party/rust/Cargo.toml` doesn't
    # define it). Listing wins over `exclude` for these specific paths.
    "third_party/rust/compiler/rustc_macros",
    "third_party/rust/compiler/rustc_fluent_macro",
]
exclude = ["third_party"]

# Inherited by the two vendored proc-macro crates
# (`third_party/rust/compiler/rustc_macros` and `rustc_fluent_macro`) via
# `[lints] workspace = true`. Needed because `cfg(bootstrap)` attrs across the
# vendored rustc tree would otherwise trip `unexpected_cfgs`. `bootstrap` is
# set by rustc's x.py when stage0-building rustc with the previous stable
# compiler; we build with plain cargo, so it's always unset and those attrs
# are silent no-ops. The rest of the rustc tree picks up an equivalent
# `--check-cfg=cfg(bootstrap)` from `[target.wasm32-unknown-unknown].rustflags`
# in `.cargo/config.toml` — but stable cargo doesn't apply target rustflags to
# host proc-macro builds, hence this workspace-lints fallback.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bootstrap)'] }

[package]
name = "verus-explorer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vir = { path = "third_party/verus/source/vir" }
air = { path = "third_party/verus/source/air" }
rust_verify = { path = "third_party/verus/source/rust_verify" }
verus_builtin_macros_lib = { path = "third_party/verus/source/builtin_macros_lib" }
proc-macro2 = "1.0.39"
wasm-bindgen = "0.2"
# rustc_* crates that this crate uses directly are not declared here — they
# are produced as rlibs by `rustc-rlibs/` and resolved at link time via
# `-L dependency=...` (set in `.cargo/config.toml`). See `src/lib.rs` for
# the corresponding `extern crate rustc_*;` declarations.

# Force getrandom 0.3's `wasm_js` feature on so its wasm32 backend compiles —
# see the companion `.cargo/config.toml` rustflag. `rand` (pulled in by
# rustc_abi) transitively depends on this.
#
# `rustc-rlibs` is listed here (not at the top-level `[dependencies]` above)
# so pulling it into the explorer's dep graph only happens on wasm32 — it's
# purely a vehicle for forcing Cargo to build wasm32 rlibs of every rustc_*
# crate the explorer/rust_verify/mir_build fork `extern crate`. Declaring it
# here (rather than building it via a separate `cargo build -p rustc-rlibs`
# step in the Makefile) keeps feature resolution in one pass across both
# trees — otherwise each invocation computes its own union and leaves
# duplicate rlibs (e.g. `wasm_bindgen` with `[]` vs `[default, std]`) in the
# shared `deps/` dir, which surfaces as rust-lld "duplicate symbol" errors.
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
rustc-rlibs = { path = "rustc-rlibs" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# Pulling in the whole rustc frontend makes the unoptimized wasm+debuginfo
# bundle big enough that rust-lld SIGSEGVs during `make dev`. Dropping
# debuginfo keeps the linker happy without giving up dev-build speed.
[profile.dev]
debug = 0

# wasm-pack's default wasm-opt pass (-O ≈ -O3) is slow on a binary this size;
# -O1 is several times faster with a small size/perf regression.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O1']
