# Single workspace shared across `verus-explorer` (main crate) and
# `rustc-rlibs` (helper that forces cargo to build wasm32 rlibs for every
# rustc_* crate the explorer links at runtime). One workspace → shared
# Cargo.lock → identical dep versions, shared feature unions → identical
# crate hashes, shared target/ → rustc-rlibs' wasm32 rlibs land in the
# deps dir the explorer (and Verus's `mir_build_verus` fork) look in for
# `extern crate rustc_*;` lookups. Two independent workspaces would
# resolve features differently and surface as E0460 "possibly newer
# version of crate" mismatches at link time.
#
# `exclude = ["third_party"]` keeps Verus's inner workspace from being
# absorbed (its members rely on `lints = { workspace = true }` from
# Verus's own `source/Cargo.toml`).
[workspace]
members = ["verus-explorer", "rustc-rlibs"]
exclude = ["third_party"]

# Aggressive size tuning for the rustc-in-wasm bundle:
# - `opt-level = "z"` favors size over speed (vs. "s" which still respects
#   loop unrolling/inlining heuristics).
# - `codegen-units = 1` keeps each crate in a single codegen unit so rustc's
#   intra-crate DCE/inlining sees everything at once. Measured: combining
#   this with the wasm-opt `-Oz` pass in verus-explorer/Cargo.toml makes
#   `lto` a no-op for size (fat/thin/off within ~5 KB of each other on the
#   28 MB final wasm), so LTO is left at cargo's default of `false` to save
#   ~5 min of build time.
# - `strip = true` drops the embedded `name` section and DWARF debuginfo
#   from the final wasm; saves a lot on a binary this large.
# - `panic = "abort"` removes panic landing pads. wasm32 has no unwinding
#   anyway (panic = unwind degrades to abort at runtime), but setting it
#   explicitly lets rustc skip emitting the cleanup edges in MIR/LLVM IR.
[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"

# Pulling in the whole rustc frontend makes the unoptimized wasm+debuginfo
# bundle big enough that rust-lld SIGSEGVs during `make dev`. Dropping
# debuginfo keeps the linker happy without giving up dev-build speed.
[profile.dev]
debug = 0
